--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "psy/psysh": "~0.5",
     "symfony/yaml": "~2.2",
     "symfony/var-dumper": "^2.6.3",
-    "pear/console_table": "~1.2.0"
+    "pear/console_table": "~1.2.0",
+    "league/climate": "^3.2"
   },
   "require-dev": {
     "phpunit/phpunit": ">=3.5",
